# zenith-monitor

./: .gitignore  Cargo.toml  profile.json
src/: db.rs  grades.rs  mail.rs  main.rs
