[package]
name = "zenith-monitor"
version = "0.1.0"
authors = ["Christophe Néraud <christophe.neraud@grenoble-inp.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.9", features = ["blocking"]}
rusqlite = {version = "0.24.2", features = ["bundled"]}
lettre = "0.10.0-alpha.4"
scraper = "0.12.0"
serde_json = "1.0"
ctrlc = "3.1.7"
